--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cancer_data"
-version = "0.3.4"
+version = "0.3.4a1"
 description = "Preprocessing for various cancer genomics datasets"
  authors = ["Kevin Hu <kevinhuwest@gmail.com>"]
 
